force-app/main/default/objects/Charket__WeChatPayment__c/Charket__WeChatPayment__c.object-meta.xml
<CustomObject>
    <label>WeChat Payment</label>
    <nameField>
        <displayFormat>WP-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>