force-app/main/default/objects/Charket__WeChatPayment__c/fields/Charket__PaymentSource__c.field-meta.xml
<CustomField>
    <fullName>Charket__PaymentSource__c</fullName>
    <label>Payment Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICBC_DEBIT</fullName>
                <label>ICBC Debit</label>
            </value>
            <value>
                <fullName>ICBC_CREDIT</fullName>
                <label>ICBC Credit</label>
            </value>
            <value>
                <fullName>ABC_DEBIT</fullName>
                <label>ABC Debit</label>
            </value>
            <value>
                <fullName>ABC_CREDIT</fullName>
                <label>ABC Credit</label>
            </value>
            <value>
                <fullName>PSBC_DEBIT</fullName>
                <label>PSBC Debit</label>
            </value>
            <value>
                <fullName>PSBC_CREDIT</fullName>
                <label>PSBC Credit</label>
            </value>
            <value>
                <fullName>CCB_DEBIT</fullName>
                <label>CCB Debit</label>
            </value>
            <value>
                <fullName>CCB Credit</fullName>
            </value>
            <value>
                <fullName>CMB_DEBIT</fullName>
                <label>CMB Debit</label>
            </value>
            <value>
                <fullName>CMB_CREDIT</fullName>
                <label>CMB Credit</label>
            </value>
            <value>
                <fullName>BOC_DEBIT</fullName>
                <label>BOC Debit</label>
            </value>
            <value>
                <fullName>BOC_CREDIT</fullName>
                <label>BOC Credit</label>
            </value>
            <value>
                <fullName>COMM_DEBIT</fullName>
                <label>COMM Debit</label>
            </value>
            <value>
                <fullName>COMM_CREDIT</fullName>
                <label>COMM Credit</label>
            </value>
            <value>
                <fullName>SPDB_DEBIT</fullName>
                <label>SPDB Debit</label>
            </value>
            <value>
                <fullName>SPDB_CREDIT</fullName>
                <label>SPDB Credit</label>
            </value>
            <value>
                <fullName>GDB_DEBIT</fullName>
                <label>GDB Debit</label>
            </value>
            <value>
                <fullName>GDB_CREDIT</fullName>
                <label>GDB Credit</label>
            </value>
            <value>
                <fullName>CMBC_DEBIT</fullName>
                <label>CMBC Debit</label>
            </value>
            <value>
                <fullName>CMBC_CREDIT</fullName>
                <label>CMBC Credit</label>
            </value>
            <value>
                <fullName>PAB_DEBIT</fullName>
                <label>PAB Debit</label>
            </value>
            <value>
                <fullName>PAB_CREDIT</fullName>
                <label>PAB Credit</label>
            </value>
            <value>
                <fullName>CEB_DEBIT</fullName>
                <label>CEB Debit</label>
            </value>
            <value>
                <fullName>CEB_CREDIT</fullName>
                <label>CEB Credit</label>
            </value>
            <value>
                <fullName>CIB_DEBIT</fullName>
                <label>CIB Debit</label>
            </value>
            <value>
                <fullName>CIB_CREDIT</fullName>
                <label>CIB Credit</label>
            </value>
            <value>
                <fullName>CITIC_DEBIT</fullName>
                <label>CITIC Debit</label>
            </value>
            <value>
                <fullName>CITIC_CREDIT</fullName>
                <label>CITIC Credit</label>
            </value>
            <value>
                <fullName>BOSH_DEBIT</fullName>
                <label>BOSH Debit</label>
            </value>
            <value>
                <fullName>BOSH_CREDIT</fullName>
                <label>BOSH Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>