force-app/main/default/objects/Charket__WeChatPayment__c/fields/Charket__SettledAmount__c.field-meta.xml
<CustomField>
    <fullName>Charket__SettledAmount__c</fullName>
    <label>Settled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>