force-app/main/default/objects/Charket__WeChatPayment__c/fields/Charket__TotalRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>Charket__TotalRefundAmount__c</fullName>
    <label>Total Refund Amount</label>
    <summarizedField>Charket__WeChatPaymentRefund__c.Charket__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Charket__WeChatPaymentRefund__c.Charket__Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryForeignKey>Charket__WeChatPaymentRefund__c.Charket__WeChatPayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>