force-app/main/default/objects/Charket__WeChatPayment__c/fields/Charket__WeChatMerchant__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatMerchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WeChat Merchant</label>
    <referenceTo>Charket__WeChatMerchant__c</referenceTo>
    <relationshipLabel>WeChat Payments</relationshipLabel>
    <relationshipName>WeChatPayments</relationshipName>
    <type>Lookup</type>
</CustomField>