force-app/main/default/objects/Charket__WeChatPayment__c/listViews/Charket__All.listView-meta.xml
<ListView>
    <fullName>Charket__All</fullName>
    <columns>NAME</columns>
    <columns>Charket__WeChatFollower__c</columns>
    <columns>Charket__Amount__c</columns>
    <columns>Charket__SettledAmount__c</columns>
    <columns>Charket__Status__c</columns>
    <columns>Charket__PaymentSource__c</columns>
    <columns>Charket__MerchantOrderNumber__c</columns>
    <columns>Charket__TransactionId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>